fix: use normal text align for description

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -41,6 +41,7 @@
   // margin-bottom: 0;
   margin: 10px 0;
   // border: 1px solid black;
+  text-align: start;
 }
 
 .site-description p {
